--- a/Fashion Store Clon/index.html
+++ b/Fashion Store Clon/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/style.scss" />
+    <script src="https://kit.fontawesome.com/49411e83f1.js" crossorigin="anonymous"></script>
     <title>Css LayOut MasterClass</title>
   </head>
   <body>
-    <div class="phone">
+    <div class="phone1">
       <header class="header">
         <sapn class="header__btn">⬅️</sapn>
         <h1 class="header__title">My Cart</h1>
@@ -68,6 +69,73 @@
           <img src="https://source.unsplash.com/random" class="item__photo">
         </article>
       </section>
+    </div>
+
+    <div class="phone2">
+      <header class="header">
+        <sapn class="header__btn">⬅️</sapn>
+        <h1 class="header__title">CHECKOUT</h1>
+        <span class="span header__btn">🗒️</span>
+      </header>
+      <section class="status">
+        <span class="status__number">01/02</span>
+        <span class="status__info">INFORMATION</span>
+      </section>
+      <section class="summary">
+        <div class="summary__info">
+          <span class="summary__title">ORDER SUMMARY</span>
+          <span class="summary__status">5 items in your cart</span>
+        </div>
+        <div class="summary__info">
+          <span class="summary__total-price">$3550</span>
+          <i class="fa-solid fa-chevron-down"></i>
+        </div>
+      </section>
+      <section class="forms">
+        <article class="forms__form">
+          <div class="form__info">
+            <div class="form__info-row">
+              <div class="info__main">
+                <span class="info__title">Delivery</span>
+                <span class="info__content">UPS international -- Express Shipping</span>
+              </div>
+              <div class="info__icon">
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+            <div class="form__info-row">
+              <div class="info__main">
+                <span class="info__title">Payment method</span>
+                <span class="info__content">Credit -- ending in 4100</span>
+              </div>
+              <div class="info__icon">
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+            <div class="form__info-row">
+              <div class="info__main">
+                <span class="info__title">Address</span>
+                <span class="info__content">Preferred address -- Home #1</span>
+              </div>
+              <div class="info__icon">
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+            <div class="form__info-row">
+              <div class="info__main">
+                <span class="info__title">Phone number</span>
+                <span class="info__content">Preferred number -- 444-444-5454</span>
+              </div>
+              <div class="info__icon">
+                <i class="fa-solid fa-arrow-right"></i>
+              </div>
+            </div>
+          </div>
+        </article>
+      </section>
+      <footer class="footer">
+        <span class="footer__proceed">Proceed to the next step</span>
+      </footer>
     </div>
   </body>
 </html>
