--- a/Design Agency Clon/index.html
+++ b/Design Agency Clon/index.html
@@ -9,42 +9,53 @@
   <body>
     <div class="wrapper">
       <div class="grid">
-        <header class="header">
-          <div class="header__top">
-            <span class="header__reviews">4.98</span>
-            <span class="header__label">Best Reviews</span>
+        <div class="grid__col">
+          <header class="header">
+            <div class="header__top">
+              <span class="header__reviews">4.98</span>
+              <span class="header__label">Best Reviews</span>
+            </div>
+            <h1 class="header__title">Grid!</h1>
+            <h3 class="header__subtitle">
+              Css grid is awesome and we love it becuase we can make many things.
+            </h3>
+          </header>
+          <div class="grid__img"></div>
+          <div class="grid__img"></div>
+        </div>
+        <div class="grid__col">
+          <div class="subgrid">
+            <div class="grid__img"></div>
+            <nav class="nav">
+              <ul>
+                <li class="nav__item">About</li>
+                <li class="nav__item">Solutions</li>
+                <li class="nav__item">Portfolio</li>
+                <li class="nav__item">Blog</li>
+              </ul>
+              <span class="nav__call-to-action">Hire Us</span>
+            </nav>
+            <div class="grid__cells">
+              <div class="grid__cell">
+                <span>Recent collabs</span>
+              </div>
+              <div class="grid__cell">
+                <span>CBP²</span>
+              </div>
+              <div class="grid__cell">
+                <span>more cases</span>
+              </div>
+            </div>
+            <div class="grid__img"></div>
           </div>
-          <h1 class="header__title">Grid!</h1>
-          <h3 class="header_-subtitle">
-            Css grid is awesome and we love it becuase we can make many things.
-          </h3>
-        </header>
-        <div class="grid__img"></div>
-        <nav class="nav">
-          <ul>
-            <li class="nav__item">About</li>
-            <li class="nav__item">Solutions</li>
-            <li class="nav__item">Portfolio</li>
-            <li class="nav__item">Blog</li>
-          </ul>
-          <span class="nav__call-to-action">Hire Us</span>
-        </nav>
-        <div class="grid__cell">
-          <span>Recent collabs</span>
-        </div>
-        <div class="grid__cell">
-          <span>Recent collabs</span>
-        </div>
-        <div class="grid__img"></div>
-        <div class="grid__img"></div>
-        <div class="grid__img"></div>
-        <div class="grid__blog-post">
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
-            non ipsam repellat, dignissimos molestiae expedita dolore iusto modi
-            voluptas voluptatem perferendis delectus dolores id suscipit? Quae
-            laboriosam at ut quod?
-          </p>
+          <div class="grid__blog-post">
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum
+              non ipsam repellat, dignissimos molestiae expedita dolore iusto modi
+              voluptas voluptatem perferendis delectus dolores id suscipit? Quae
+              laboriosam at ut quod?
+            </p>
+          </div>
         </div>
       </div>
     </div>
