--- a/macOS Clon/index.html
+++ b/macOS Clon/index.html
@@ -10,10 +10,10 @@
     <section class="info">
       <div class="info__hd">
         <div class="hd__discs">
-          <span></span>
-          <span></span>
+          <div class="discs__out-circle"></div>
+          <div></div>
         </div>
-        <div>
+        <div class="hd__footer">
           <span class="hd__size">4TB</span>
           <div class="hd__full">
             <span></span>
@@ -25,10 +25,10 @@
       </div>
       <div class="info__hd">
         <div class="hd__discs">
-          <span></span>
-          <span></span>
+          <div class="discs__out-circle"></div>
+          <div></div>
         </div>
-        <div>
+        <div class="hd__footer">
           <span class="hd__size">4TB</span>
           <div class="hd__full">
             <span></span>
@@ -40,10 +40,10 @@
       </div>
       <div class="info__hd">
         <div class="hd__discs">
-          <span></span>
-          <span></span>
+          <div class="discs__out-circle"></div>
+          <div></div>
         </div>
-        <div>
+        <div class="hd__footer">
           <span class="hd__size">4TB</span>
           <div class="hd__full">
             <span></span>
@@ -55,10 +55,10 @@
       </div>
       <div class="info__hd">
         <div class="hd__discs">
-          <span></span>
-          <span></span>
+          <div class="discs__out-circle"></div>
+          <div></div>
         </div>
-        <div>
+        <div class="hd__footer">
           <span class="hd__size">4TB</span>
           <div class="hd__full">
             <span></span>
@@ -88,31 +88,31 @@
       <div class="stats__stat">
         <div class="stat__info">
           <span class="stat__title">Free Space</span>
-          <span class="stat__size">2.34TB</span>
+          <span class="stat__size">2.34 TB</span>
         </div>
       </div>
       <div class="stats__stat">
         <div class="stat__info">
           <span class="stat__title">Documents</span>
-          <span class="stat__size">840.54MB</span>
+          <span class="stat__size">840.54 MB</span>
         </div>
       </div>
       <div class="stats__stat">
         <div class="stat__info">
           <span class="stat__title">Audio Files</span>
-          <span class="stat__size">1.08TB</span>
+          <span class="stat__size">1.08 TB</span>
         </div>
       </div>
       <div class="stats__stat">
         <div class="stat__info">
           <span class="stat__title">Images</span>
-          <span class="stat__size">1.82TB</span>
+          <span class="stat__size">1.82 TB</span>
         </div>
       </div>
       <div class="stats__stat">
         <div class="stat__info">
           <span class="stat__title">Video</span>
-          <span class="stat__size">2.38TB</span>
+          <span class="stat__size">2.38 TB</span>
         </div>
       </div>
     </section>
